<resources>
    <string name="app_name">Fresh Express</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">New User? Sign Up Now</string>
    <string name="password">Password</string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="fill_details_register">Please fill your details below:</string>
    <string name="next">Next</string>
    <string name="fill_details_forgot">Enter your registered mobile number and email below:</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password">New Password (Min 4 characters)</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below :</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="cost_person">Cost / Person</string>
    <string name="_4_5">4.5</string>
    <string name="choose_items_from_menu_listed_below">Choose items from menu listed below:</string>
    <string name="faqQ1">Q. Is there a minimum order value?</string>
    <string name="faqA1">We have no minimum order value and you can order for any amount.</string>
    <string name="faqQ2">Q. Do you charge for delivery?</string>
    <string name="faqA2">Delivery fee varies from city to city and is applicable if order value is below a certain amount. Additionally, certain restaurants might have fixed delivery fees.</string>
    <string name="faqQ3">Q. How long do you take to deliver?</string>
    <string name="faqA3">Standard delivery times vary by the location selected and prevailing conditions. Once you select your location, an estimated delivery time is mentioned for each restaurant.</string>
    <string name="faqQ4">Q. Can I edit my order?</string>
    <string name="faqA4">You could contact customer support team via chat or call to do so. Once order is placed and restaurant starts preparing your food, you may not edit its contents</string>
    <string name="faqA5">We currently do not support this functionality. However, you can place orders for individual items from different restaurants</string>
    <string name="faqQ5">Q. Is single order from many restaurants possible?</string>
    <string name="preference_file_name">Restaurant Preferences</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="place_order">Place Order</string>
    <string name="ordering_from_restaurant_name">Ordering From: Restaurant Name</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully!!</string>
    <string name="your_previous_orders_are">Your previous orders are:</string>
    <string name="you_do_not_have_any_favourite_restaurant">You do not have any favourite Restaurant</string>
    <string name="faqQ6">Q. What are your delivery hours?</string>
    <string name="faqA6">Our delivery hours vary for different locations and depends on availability of supply from restaurant partners</string>
    <string name="faqQ0">Q. What is Fresh Express customer care number?</string>
    <string name="faqA0">We are always ready to help our customers, you can ask about any queries by calling our customer care executive or by sending us an Email</string>
    <string name="any_restaurant_request">Any restaurant request?</string>
    <string name="our_delivery">Our delivery partner will call you after reaching and leave order at your door (Not applicable for Cash On Delivery)</string>
    <string name="fresh_food">Fresh Food</string>
    <string name="intro1">Healthy diet is eating fresh food. Eating fresh food in a sensual way is the key to good health and blissful living. FreshExpress guarantees the quality as well as the freshness of the food we deliver. With a lots of variety of restaurants and all types of cuisines it really is an amazing experience to get your food through FreshExpress services.</string>
    <string name="express_delivery">Express Delivery</string>
    <string name="easy_payments">Easy Payments</string>
    <string name="intro3">FreshExpress allows users to pay with Cash on Delivery as well as Pay Online. FreshExpress has highly secured payment gateways and trusted payment partners. Also we do not have any restrictions on minimum order value.</string>
    <string name="intro2">Experience our superfast delivery, food is always delivered Fresh and on time. During this COVID-19 pandemic we understand that social distancing is most important and hence we also support no contact delivery in which your order will be delivered at your doorstep without any hand to hand contact.</string>
    <string name="opt_for_no_contact_delivery">Opt for no contact delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="to_proceed">To proceed please enter your password and check your address</string>
    <string name="delivery_address_">Delivery Address:</string>
    <string name="payable_amount">Payable Amount:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="logo">Logo</string>
    <string name="ready_to_order_fresh_food">Ready to order Fresh Food</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="user_name">User Name</string>
    <string name="_9999555511">9999555511</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="quote">quote</string>
    <string name="introImage1">introImage1</string>
    <string name="introImage2">introImage2</string>
    <string name="introImage3">introImage3</string>
    <string name="profileBack">profileBack</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name: Saurabh Parate</string>
    <string name="mobile_number_">Mobile Number: 8308893558</string>
    <string name="email_">Email: sparate04@gmail.com</string>
    <string name="address_">Address: Yavatmal</string>
    <string name="logo_name">logo name</string>
    <string name="ok">OK</string>
    <string name="dash">—</string>
    <string name="fav_off">fav off</string>
    <string name="fav_on">fav on</string>
    <string name="restaurant_name_abc">Restaurant Name: ABC</string>
    <string name="date_04_02_2001">Date: 04/02/2001</string>
    <string name="time_12_00_00">Time: 12:00:00</string>
    <string name="total_price_400">Total Price: 400</string>
    <string name="name_of_item">Name of Item</string>
    <string name="rs_150">Rs. 150</string>
    <string name="_1">1</string>
    <string name="btnQty">#</string>
    <string name="add">Add</string>
    <string name="search_for_restaurants">Search for restaurants</string>
    <string name="name_a_z">Name (A-Z)</string>
    <string name="name_z_a">Name (Z-A)</string>
    <string name="cost_for_one_low_to_high">Cost for one (Low to High)</string>
    <string name="cost_for_one_high_to_low">Cost for one (High to Low)</string>
    <string name="rating_low_to_high">Rating (Low to High)</string>
    <string name="rating_high_to_low">Rating (High to Low)</string>
    <string name="btnQty1">+</string>
    <string name="btnQty2">-</string>
    <string name="_5">5</string>
    <string name="fresh_express">FreshExpress</string>
</resources>
