<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.FAQsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        tools:context=".fragment.FAQsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarFAQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

        <RelativeLayout
            android:id="@+id/FAQ0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/faqQ0"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ0"
                android:layout_margin="4dp"
                android:text="@string/faqA0"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnContactUsPhone"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/txtFaqA0"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_border"
                android:padding="8dp"
                android:text="@string/call_us"
                android:textAllCaps="false"
                android:textColor="#ff6d00"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnContactUsEmail"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/txtFaqA0"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button_border"
                android:padding="8dp"
                android:text="@string/email_us"
                android:textAllCaps="false"
                android:textColor="#ff6d00"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FAQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/faqQ1"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ1"
                android:layout_margin="4dp"
                android:text="@string/faqA1"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FAQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/faqQ2"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ2"
                android:layout_margin="4dp"
                android:text="@string/faqA2"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FAQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/faqQ3"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ3"
                android:layout_margin="4dp"
                android:text="@string/faqA3"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FAQ4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/faqQ4"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ4"
                android:layout_margin="4dp"
                android:text="@string/faqA4"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FAQ5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqQ5"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ5"
                android:layout_margin="4dp"
                android:text="@string/faqA5"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/FAQ6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/txtFaqQ6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/faqQ6"
                android:textColor="#ff6d00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFaqA6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFaqQ6"
                android:layout_margin="4dp"
                android:text="@string/faqA6"
                android:textSize="17sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>