<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgLoginPage"
        android:layout_width="210dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/app_logo_coloured" />

    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLoginPage"
        android:layout_margin="8dp"
        android:autofillHints="mobile number"
        android:background="#fff"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="8dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNo"
        android:layout_margin="8dp"
        android:autofillHints="password"
        android:background="#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>