<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgIntro1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/introImage1"
        android:src="@drawable/img1" />

    <TextView
        android:id="@+id/txtIntro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgIntro1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/fresh_food"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIntro1"
        android:layout_margin="8dp"
        android:text="@string/intro1"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="italic" />

</RelativeLayout>